<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BottomFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/list"
            android:name="com.decimalcorp.aditya.awaazngo.ItemFragment"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            tools:context=".ItemFragment"
            android:layoutMode="clipBounds"
            tools:listitem="@layout/fragment_item" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/logo2"
            android:layout_below="@+id/list"
            android:id="@+id/logo_2"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#9c9fb3"
            android:text="@string/end_text"
            android:paddingHorizontal="25dp"
            android:id="@+id/voice_subtext"
            android:layout_below="@+id/logo_2"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/voice_subtext"
            android:layout_marginTop="20dp"
            android:id="@+id/social"
            android:orientation="horizontal">

            <Button
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/fb"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:layout_margin="5dp"
                android:background="@drawable/facebook"/>
            <Button
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/tw"
                android:paddingHorizontal="5dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/twitter"/>
            <Button
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_weight="1"
                android:id="@+id/ig"
                android:layout_margin="5dp"
                android:background="@drawable/instagram"/>
            <Button
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_weight="1"
                android:id="@+id/yt"
                android:layout_margin="5dp"
                android:background="@drawable/youtube"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Latest"
            android:textSize="15sp"
            android:layout_below="@+id/social"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/latest"
            android:textColor="#3a2a51"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/latest"
            android:textColor="#9c9fb3"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/text1"
            android:text="@string/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Us"
            android:textSize="15sp"
            android:layout_below="@+id/text1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/about"
            android:textColor="#3a2a51"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about"
            android:textColor="#9c9fb3"
            android:textSize="15sp"
            android:id="@+id/text2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/text2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact"
            android:textSize="15sp"
            android:layout_below="@+id/text2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/contact"
            android:textColor="#3a2a51"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact"
            android:textColor="#9c9fb3"
            android:textSize="15sp"
            android:id="@+id/text3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/text3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#3a2a51"
            android:id="@+id/news"
            android:layout_below="@+id/text3"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="Subscribe To Our Newsletter"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/news"
            android:layout_marginTop="10dp"
            android:hint="Your Email ID"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/fp"
            android:background="@drawable/newsletter"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AWAAZ NGO 2017 All Rights Reserved"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textColor="#9c9fb3"
            android:layout_below="@+id/fp"
            android:layout_marginBottom="25dp"
            android:gravity="center"/>

    </RelativeLayout>

</ScrollView>